# serde-xmlrpc

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: request.rs
src/: de.rs  error.rs  lib.rs  parser.rs  request.rs  ser.rs  utils.rs  value.rs  xml_ext.rs
src/util/: map.rs  mod.rs  seq.rs  value.rs
src/value/: de.rs  mod.rs  ser.rs
