[package]
name = "serde_xmlrpc"
description = "A simple, no nonsense, XML-RPC serde implementation for Rust"
license = "MIT"
version = "0.1.1"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"
documentation = "https://docs.rs/serde_xmlrpc"
repository = "https://github.com/belak/serde-xmlrpc"
readme = "README.md"

[dependencies]
anyhow = "1.0"
base64 = "0.11"
iso8601 = "0.3"
quick-xml = "0.17"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-transcode = "1.0"
