[package]
name = "serde_xmlrpc"
description = "A simple, no nonsense, XML-RPC serde implementation for Rust"
license = "MIT OR Apache-2.0"
version = "0.2.1-dev"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"
documentation = "https://docs.rs/serde_xmlrpc"
repository = "https://github.com/belak/serde-xmlrpc"
readme = "README.md"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
iso8601 = "0.6"
quick-xml = "0.31"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-transcode = "1.1"

[dev-dependencies]
reqwest = { version= "0.11", features = ["blocking"] }
