[package]
name = "simple-xmlrpc"
description = "A simple, no nonsense, XML-RPC implementation for Rust"
license = "MIT"
version = "0.1.2"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"
documentation = "https://docs.rs/simple-xmlrpc"
repository = "https://github.com/belak/simple-xmlrpc-rs"
readme = "README.md"

[dependencies]
serde_xmlrpc = "0.2.3"
thiserror = "1.0"
